# wisp

./: .gitignore  Cargo.toml  README.md  tailwind.config.cjs
beigebox_core/: Cargo.toml
beigebox_core/src/: messages.rs
beigebox_database/: Cargo.toml
beigebox_database/src/: database.rs  user.rs
beigebox_session_manager/: Cargo.toml
beigebox_session_manager/src/: authenticated_user.rs  lib.rs  session_manager.rs
src/: admin.rs  home.rs  login.rs  main.rs  signup.rs
wisp_core/: Cargo.toml
wisp_database/: Cargo.toml
wisp_database/src/: database.rs  user.rs
wisp_pages/: .gitignore  Cargo.toml  build.rs  tailwind.config.cjs
wisp_pages/src/: admin.rs  home.rs  lib.rs  login.rs  signup.rs
wisp_pages/tailwind/src/: main.css
wisp_session_manager/: Cargo.toml
wisp_session_manager/src/: admin_user.rs  authenticated_user.rs  lib.rs  session_manager.rs
www/public/: input.css
