[package]
name = "beigebox"
version = "0.1.0"
edition = "2024"

[dependencies]
beigebox_core = { path = "beigebox_core" }
beigebox_database = { path = "beigebox_database" }
beigebox_session_manager = { path = "beigebox_session_manager" }

rocket = { version = "0.5.1", features = ["secrets"] }
maud = { version = "0.27.0", features = ["rocket"] }