[package]
name = "wisp"
version = "0.1.0"
edition = "2024"

[dependencies]
wisp_core = { path = "wisp_core" }
wisp_database = { path = "wisp_database" }
wisp_session_manager = { path = "wisp_session_manager" }
wisp_pages = { path = "wisp_pages" }

rocket = { version = "0.5.1", features = ["secrets"] }
maud = { version = "0.27.0", features = ["rocket"] }